# file-uploader-demo

./: .gitignore  .tool-versions  README.md  mix.exs
config/: config.exs
lib/: file_uploader.ex
lib/file_uploader/: application.ex  utils.ex
playground_web/: .babelrc  index.html  inline.js  package-lock.json  package.json  tsconfig.json
playground_web/src/: App.tsx  index.tsx
scripts/: server.sh
test/: file_uploader_test.exs
wasm/: Cargo.toml  build.sh  index.html
wasm/src/: main.rs  reducer.rs
wasm/src/components/: file_uploader.rs  input.rs  mod.rs
web/: dev-start.sh  package-lock.json  package.json
web/src/: App.tsx  FileUploader.tsx  index.html  index.tsx
