[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = "0.2.80"
web-sys = "0.3.57"
yew = "0.19.3"
yew-hooks = "0.1.54"
